<resources>
    <string name="app_name">Ambulance Hotline</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cancel">Cancel</string>
    <string name="location_permission_denied">Permission to access location denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Permission Required to view your current location</string>
    <string name="user_name">username</string>
    <string name="reg_txt">Register Here</string>
    <string name="uname">Enter Username</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">SIGN IN</string>
    <string name="quote">Whenever You Need Assistance</string>
    <string name="sign_in_with_google">Google</string>
    <string name="forgot_password">Forgot Password? No Worries.</string>
    <string name="enter_email">Enter Email you use for your Healt.hy account, and we will help you create a new password.</string>
    <string name="next">NEXT</string>
    <string name="changepassword">UPDATE</string>
</resources>