<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/flayout2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="228dp">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:src="@drawable/iconsback"
                android:id="@+id/back_fab"
                android:elevation="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reg"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="105dp"
                android:layout_gravity="center"
                android:text="@string/reg_txt"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="62dp"
            android:layout_gravity="center"
            android:background="@drawable/blue_border_rounded_cornwe"
            >

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/user_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:hint="@string/uname"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/user_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/blueuser4"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            >

            <EditText
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/email_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/email"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            >

            <EditText
                android:id="@+id/pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/pass1_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/pass1_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/password"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe"
            >

            <EditText
                android:id="@+id/cpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/pass2_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:hint="@string/cpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/pass2_icon"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/password"/>
        </RelativeLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:id="@+id/showpassword2"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <Button
                android:id="@+id/sign_up2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_toRightOf="@+id/signup2_icon"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/black"
                android:text="SIGN UP"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/signup2_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/sign" />
        </RelativeLayout>


    </LinearLayout>



</RelativeLayout>